Polish first part of task 6 of the report
There's a TODO where to continue later.

--- a/report_template_dit348.tex
+++ b/report_template_dit348.tex
@@ -535,44 +535,44 @@ have a designated role whose responsibility is to oversee any integration
 concerns and communicate with other teams. The role would be assigned in a
 round-robin fashion (this way, each team member would have an equal chance to
 take on the role). Moreover, the assigned person would be responsible to lead
-the meetings (discussed in the previous improvement step) and would utilize the
-metrics and measurement plans, particularly M3.1 and M3.2.
-
-% TODO: start here with the final review. The following and onwards are not
-% reviewed yet.
+the meetings (discussed in the previous improvement step) and would utilize
+available metrics and measurement plans, particularly M3.1 and M3.2.
 
 \section{Implementation of an SPI Initiative}
 \label{sec:implementation}
 
-Because of an illness, I was unable to attend the second Lego Scrum workshop,
-so the alternative task is to be completed in this section instead.
+Because of an illness, I was unable to attend the second Lego Scrum workshop.
+Therefore, the alternative task is worked on in this section instead.
 
 A challenge that is commonly encountered is related to the concept of
-\textbf{Change Management}. The term refers to the act of companies adapting
-to a change or reorganization at any CMM level \cite{Beecham2003}. It is
+\textbf{Change Management}. The term refers to the act of companies adapting to
+a change or reorganization at any CMM level \cite{Beecham2003}. It is
 oftentimes the case that, in the event of a low CMM level, employees are
-reluctant to change, and they do not see the benefits of the change
+reluctant to change and do not see the benefits of the change
 \cite{Beecham2003}. One way to tackle this challenge is to employ a performance
 measurement technique that would assess the levels of performance before and
-after the change \cite{Oakland2007}. Furthermore, this would allow the
+after each change \cite{Oakland2007}. Furthermore, this would allow the
 management team to retain a sensible control over the change, as well as
 identify target areas for further improvement \cite{Oakland2007}. In essence,
-this technique is a form of a \textbf{feedback loop} that is to be utilized
-throughout the change process.
+this technique is a form of a \textbf{feedback loop} that is meant to be
+applied to a long-term SPI initiative.
 
-Another difficulty that is typically seen in software organizations is concerned
-with knowledge management. To illustrate, Dybå \cite{Dyba2005}, in a paper from
-2005, sets out to define hypotheses that would help to understand whether
-a positive association between an SPI initiative and the following two learning
-strategies exists: (i) \textit{"exploitation"}, the use of existing knowledge,
-and (ii) \textit{"exploration"}, the acquisition of new knowledge. Furthermore,
-a question is raised ed in terms of what a sensible balance between the two
-strategies is. The author concludes that the two strategies are not mutually
-exclusive, and that both learning strategies have a significant contribution to
-the success of the SPI \cite{Dyba2005}. Thereby, practitioners should apply the
-two strategies in a symbiotic nature, and a sensible balance is to be decided
-upon by the  team members and the management team of a particular organization
-based on their needs \cite{Dyba2005}.
+Another difficulty which is typically seen in software organizations is
+concerned with \textbf{knowledge management}. To illustrate, Dybå, in a paper
+from 2005 \cite{Dyba2005}, sets out to define hypotheses that would help to
+understand whether a positive association between an SPI initiative and the
+following two learning strategies exists: (i) \textit{"exploitation"}, the use
+of existing knowledge, and (ii) \textit{"exploration"}, the acquisition of new
+knowledge. Furthermore, a question is raised regarding what a reasonable
+balance between the two strategies is. The author concludes that the two
+strategies are not mutually exclusive, and that both learning strategies have a
+significant contribution to the success of SPI \cite{Dyba2005}. Thereby,
+practitioners should apply the two strategies in a symbiotic nature.
+Additionally, a reasonable balance (of the strategies) is to be decided upon by
+team members and their management team based on their domain of expertise and
+experience \cite{Dyba2005}.
+
+% TODO: continue reviewing here!!!
 
 Moreover, a recurring barrier of SPI initiatives is the lack of \textbf{SPI
 awareness} which stems from the lack of commitment from the management team
